# CV1

./: .travis.yml  LICENSE  OpenCV.props  OpenCV_release.props  README.md
edgesDetection/: DFTFilter.cpp  DFTFilter.h  Laplacian.cpp  Laplacian.h  Source.cpp  Timer.cpp  Timer.h  VideoPlayer.cpp  VideoPlayer.h  edgesDetection.sln  edgesDetection.vcxproj  edgesDetection.vcxproj.filters
overlapDetection/: CMakeLists.txt  EdgesDetector.h  Source.cpp  VideoPlayer.cpp  edgesDetection.vcxproj  overlapDetection.vcxproj  overlapDetection.vcxproj.filters
overlapDetection/config/: config.cfg
overlapDetection/src/: Clustering.cpp  Clustering.h  Configuration.cpp  Configuration.h  DFTFilter.cpp  DFTFilter.h  EdgesDetector.h  EdgesDetectorCreator.h  ExpFilter.cpp  ExpFilter.h  Laplacian.cpp  Laplacian.h  Mean.cpp  Mean.h  OpticalFlow.cpp  OpticalFlow.h  Smoothing.h  SmoothingCreator.h  Source.cpp  Timer.cpp  Timer.h  VideoHandler.cpp  VideoHandler.h  VideoPlayer.cpp  VideoPlayer.h
overlapDetection/x64/: overlapDetection.sln  overlapDetection.vcxproj  overlapDetection.vcxproj.filters
samples/: averaging.cpp  cvtColor.cpp  opticalFLowFarneback.cpp  opticalFlowLK.cpp  videoCapture.cpp
samples/CMake_example/: CMakeLists.txt
